Fw2020/scss/fw2020.scss
// J2 FW2020 theme
// Copyright 2019-2020 J2 Authors
// Licensed under MIT (https://github.com/johnfairh/J2/blob/master/LICENSE)

// This is the main SCSS file for the site included after all of Bootstrap.

.font-weight-slightly-bold {
  font-weight: $font-weight-demi-bold;
}

@media (min-width: 400px) {
  .d-xxs-inline {
    display: inline !important;
  }
  .d-xxs-block {
    display: block !important;
  }
}

//
// General overrides
//

h1 {
  margin-bottom: 1rem;
}

// For 'inline' headings
h6 {
  margin-bottom: 0;
  font-size: inherit;
  font-weight: 700;
}

body {
  @include j2-navigation-colors();
  -webkit-font-smoothing: antialiased;
}

//
// Language-switching
//

.j2-swift .j2-objc {
  display: none;
}

.j2-objc .j2-swift {
  display: none;
}

.j2-language-missing {
  font-size: 80%;
  font-style: italic;
}

//
// Code and Pre
// See `code-themes.scss` for the text colors.
//

code {
  hyphens: none;
  text-align: left;
  word-spacing: normal;
  word-wrap: normal;
  tab-size: 4;
  white-space: pre;

  .pr-token a {
    color: inherit;
  }
}

:not(pre) > code {
  @include border-radius(.2em);
  padding: .1em;
  white-space: normal;
}

pre {
  position: relative;
  padding: .5rem 1rem;
  margin-bottom: .5rem;
  overflow: auto;
}

p + pre {
  margin-top: -.5rem;
}

//
// Tables
//

.j2-table {
  @extend .table;
  @extend .table-bordered;
  @extend .table-striped;
  @extend .table-responsive;
}

.j2-param-table {
  th,
  td {
    border: $j2-navigation-border;
    p:last-child {
      margin-bottom: 0;
    }
  }

  td {
    padding: .5rem;

    &:first-of-type {
      text-align: right;
    }
  }
}

//
// Titlebar
//

.j2-titlebar {
  @include j2-titlebar-colors();

  .j2-coverage {
    opacity: .6;
  }

  &.navbar {
    padding: .5rem .5rem .5rem 1rem;
  }

  // Searchbar - typeahead styles at bottom of this file
  .navbar-nav {
    form:focus-within {
      width: 100%;
    }
    .form-inline {
      padding: 0 .5rem;
    }
  }

  // Language & translation switchers

  .dropdown-menu {
    @include j2-navigation-colors();
    min-width: 0;
    padding: .25rem 0;
    font-size: .9rem;

    .dropdown-item {
      padding: 0 1.5rem;
      &:hover {
        opacity: 1;
      }
    }
  }

  .dropdown-item[aria-current="true"]::before {
    position: absolute;
    display: inline-block;
    margin-left: -1em;
    font-weight: bolder;
    content: "✓";
  }

  // Not proud...
  .j2-title-svg {
    margin-top: -.187rem;
  }

  // Flag emoji don't follow 'color'
  .j2-trans-dropdown {
    opacity: .9;
    &:hover {
      opacity: .75;
    }
  }
}

$j2-titlebar-height: 56px;

//
// Breadcrumbs
//

.j2-breadcrumb {
  padding-top: .5rem;
  padding-bottom: .5rem;
  margin: 0;
  border-top: $j2-navigation-border;
  border-bottom: $j2-navigation-border;
}

$j2-breadcrumbs-height: 37px;

//
// Main nav
//

.j2-nav {
  @include media-breakpoint-down(sm) {
    width: 100%;
    border-bottom: $j2-navigation-border;
  }

  overflow-x: scroll;

  @include media-breakpoint-up(md) {
    max-width: 250px;
    border-right: $j2-navigation-border;
  }

  @include media-breakpoint-up(lg) {
    max-width: 300px;
  }
}

.j2-unlimited-nav-width .j2-nav {
  max-width: none;
}

@mixin j2-nav-item-border() {
  @include border-radius(.4rem);
  background: $j2-navigation-highlight-bg;
  border: $j2-navigation-highlight-border;
}

.j2-nav-list {
  width: max-content;
  padding-top: .5rem;
  padding-left: .5rem;
  list-style-type: none;

  .j2-nav-group {
    padding-top: .5rem;
    padding-bottom: .5rem;
    > .j2-nav-item {
      color: inherit;
    }
  }

  .j2-nav-sublist {
    padding-left: 0;
    font-size: .9rem;
    list-style-type: none;
    .j2-nav-sublist {
      padding-left: .5rem;
    }
  }

  .j2-nav-item {
    display: block; // fill to right for hover
    padding-right: 4px;
    color: $j2-navigation-secondary-color;

    &:not(.active):hover {
      @include j2-nav-item-border();
      padding-left: 4px;
      margin: -1px -1px -1px -5px;
      opacity: 1;
    }

    &.active {
      @include j2-nav-item-border();
      padding: 2px 4px;
      margin-left: -5px;
    }
  }
}

//
// Article
//

.j2-article {
  @include j2-article-colors();

  // This width: 0 is flexbox black magic.  Without it,
  // if the article column has a very wide element (eg.
  // a `pre` then as the browser shrinks, flexbox prioritizes
  // the article width over shrinking the `pre` and stacks
  // the `col` _under_ the left nav `col`.  Which is bad.
  width: 0;
  padding-top: 3rem;
}

.j2-article-wrapper {
  max-width: 800px;
  @media (min-width: 1400px) {
    max-width: 56vw;
  }
  margin: auto;
}

// .j2-anchor {} marker class for anchor.js

// Adjust pos and color of anchor icons
.anchorjs-link {
  @include j2-article-dim-links();
  position: absolute;
  padding-top: .1em;
  padding-right: 1em;
  padding-left: .2em !important;
}

// Callouts

@mixin j2-callout-colors($color) {
  border-left: 5px solid $color;

  .aside-title,
  .j2-callout-title {
    color: $color;
  }
}

.aside,
.j2-callout {
  @include j2-callout-colors($j2-callout-color);
  padding: .38rem .75rem;
  margin-bottom: 1rem;

  .aside-title,
  .j2-callout-title {
    padding-bottom: 0;
    margin: 0;
    font-size: .75rem;
    text-transform: uppercase;
    letter-spacing: 1px;
    user-select: none;
  }
  p:last-child {
    margin-bottom: 0;
  }
}

.j2-callout-warning {
  @include j2-callout-colors($j2-callout-warning-color);
}

.j2-callout-deprecated {
  @include j2-callout-colors($j2-callout-deprecated-color);
}

.j2-callout-declaration {
  @include j2-callout-colors($j2-callout-declaration-color);
  pre,
  code {
    padding-right: 0;
    padding-left: 0;
    margin: 0;
    background: inherit;
  }

  .j2-callout-title {
    display: none;
  }
}

// Availability float list

.j2-availability {
  float: right;
  padding-left: .75rem;
  font-size: smaller;
  ul {
    padding-left: 0;
    margin-bottom: 0;
    list-style-type: none;
  }
}

// Topics and Items

.j2-item-overview {
  p:last-child {
    margin-bottom: .25rem;
  }
}

$item-overview-indent: 2rem;

.j2-item-list {
  padding-left: 0;
  margin-bottom: 1.2rem;
  list-style-type: none;

  .j2-item-overview {
    margin-left: $item-overview-indent;
  }

  > li {
    margin-bottom: .5rem;
  }
}

// .j2-item-anchor {} marker class for JS

.j2-item-title {
  code {
    padding: 0;
    background: inherit;
  }

  .j2-item-secondary {
    color: $j2-article-secondary-color;
  }

  // These add an indent to the 2nd+ lines
  display: inline-block;
  margin-left: $item-overview-indent;
  text-indent: -$item-overview-indent;
}

.j2-item-title-discouraged {
  @extend .j2-item-title;
  text-decoration: line-through;
  &:hover {
    text-decoration: line-through underline !important;
  }
}

// The outer thing that gets collapsed.
// Padding not permitted because bootstrap glitches.
.j2-item-popopen-wrapper {
  // Middle collapsed thing, adds vertical spacing outside the border.
  .j2-item-popopen {
    padding-bottom: $spacer / 2;

    // Notch on the popopen.  Somewhat egregious, jazzy inheritance.
    // Replace with SVG?
    .j2-item-popopen-pointer {
      position: relative;
      top: 6px;
      left: 19px;
      width: 12px;
      height: 12px;
      background: $j2-article-bg;
      border-top: $j2-navigation-border;
      border-left: $j2-navigation-border;
      transform: rotate(45deg);
    }

    // Inner collapsed thing, has the border and content within
    .j2-item-popopen-body {
      padding: ($spacer / 2) $spacer 0 $spacer;
      border: $j2-navigation-border;

      > p:last-child {
        margin-bottom: $spacer / 2;
      }
    }

    // Show members/Github links
    .j2-item-nav {
      padding-bottom: .5rem;
    }
    .j2-item-nav-item + .j2-item-nav-item::before {
      padding: 0 .5rem 0 .25rem;
      color: $j2-article-color;
      content: "|";
      user-select: none;
    }
  }
}

// For collapse-never and Dash modes.  More in js.
.j2-never-collapse {
  .collapse:not(.show) {
    display: block;
  }
}

//
// Aux nav
//

.j2-aux-nav {
  @include j2-article-colors();
  padding-top: 6rem;
  padding-left: .6rem;
  font-size: .9rem;

  .j2-aux-nav-wrapper {
    padding-top: 1rem;
  }

  a {
    display: inline-block;
    margin-left: .6rem;
    text-indent: -.6rem;
    word-break: break-word;
    word-wrap: break-word;
  }

  .j2-aux-group {
    padding-left: 0;
    list-style-type: none;
  }

  .j2-aux-action {
    @include j2-article-dim-links();
  }
}

//
// Footer
//

.j2-footer {
  border-top: $j2-navigation-border;
  border-bottom: $j2-navigation-border;
  p {
    margin-bottom: .8rem;
  }
}

//
// Responsive sticky rules
//

$j2-header-height: add($j2-titlebar-height, $j2-breadcrumbs-height);

@mixin j2-sticky-sidebar() {
  position: sticky;
  top: $j2-header-height;
  max-height: subtract(100vh, $j2-header-height);
  overflow-y: auto;
}

@include media-breakpoint-up(md) {
  .j2-header {
    position: sticky;
    top: 0;
    // sticky sidebars go under
    z-index: $zindex-sticky;
  }

  .j2-nav {
    @include j2-sticky-sidebar();
  }

  // #-anchor link vpos adjustment
  :target::before {
    display: block;
    height: $j2-header-height;
    margin-top: -$j2-header-height;
    pointer-events: none;
    visibility: hidden;
    content: "";
  }
}

.j2-aux-nav-wrapper {
  @include j2-sticky-sidebar();
}

//
// Typeahead search
//
.twitter-typeahead {
  width: 100% !important;
}

// Lower entryfield
.tt-hint {
  color: $input-color;
  background-color: $input-bg !important;
}

// Upper entryfield, transparent bg
.tt-input {
  color: $input-color;
}

// Affects entryfield and suggestion
.tt-highlight {
  font-weight: 700;
}

.tt-menu {
  @include j2-navigation-colors();
  @include border-radius($border-radius);
  max-width: 100%;
  margin: 0;
  border: $j2-navigation-border;
}

.tt-droprow {
  padding: 0 1rem;
  overflow-x: hidden;
  white-space: nowrap;
  span {
    display: table-cell;
  }
  @include media-breakpoint-down(sm) {
    border-bottom: $j2-navigation-border;
  }
}

.tt-sug-parent-name {
  width: 100%;
  font-size: .9em;
  @include media-breakpoint-up(md) {
    text-align: right;
  }
}

.tt-suggestion {
  &:hover,
  &.tt-cursor {
    cursor: pointer;
    background-color: $dropdown-link-hover-bg;
  }
}

//
// Dash overrides. Javascript throws this class onto
// the html element along with 'j2-never-collapse' before
// the user sees the page.
//

.dash {
  .j2-titlebar,
  .j2-breadcrumb,
  .j2-nav,
  .j2-aux-nav,
  .j2-footer {
    display: none !important;
  }

  .j2-article {
    flex: 0 0 100%;
    max-width: 100%;
  }

  // Show both languages in declarations...
  .j2-objc .j2-swift,
  .j2-swift .j2-objc {
    display: unset;

    // But not in autolinks
    &.j2-secondary {
      display: none;
    }

    // And not if it's actually an apology
    &.j2-language-missing {
      display: none;
    }
  }

  // Show declaration language name
  .j2-callout-declaration .j2-callout-title {
    display: unset;
  }
}

